--- a/index2.html
+++ b/index2.html
@@ -84,7 +84,8 @@
     <h3>目次</h3>
     <ul>
       <li><a href="#overview">概要</a></li>
-      <li><a href="purpose">主な使用用途</a></li>
+      <li><a href="#specifications">詳しいスペック</a></li>
+      <li><a href="#purpose">主な使用用途</a></li>
       <li><a href="#howtouse">どうやって使う？</a></li>
       <li><a href="#selectparts">パーツの選び方</a></li>
     </ul>
@@ -98,6 +99,23 @@
       教育用としてはもちろん、電子工作やロボット制作、ホームサーバー作りなど、さまざまな用途に活用されています。
       小さいながらも本格的なコンピューターとして、多くの人に利用されています。
       <img id="piimage" src="PjfazxMvpkBgoE9G2kJiDh-1006156954.jpg" alt="Raspberry Pi image" />左はラズベリーパイ5の画像。電子工作用の豊富なピンなどが特徴。</p>
+    <h4 id="specifications">詳しいスペックについて</h4>
+    <p>ポート類</p>
+    <ul>
+      <li>Gigabit Ethernet LAN 1ポート</li>
+      <li>USB3.0 2ポート</li>
+      <li>USB2.0 2ポート</li>
+      <li>micro HDMI 2ポート</li>
+      <li>電源供給用USB-C 1ポート</li>
+      <li>PCI Express 2.0 1ポート</li>
+      <li>CSI/DSIポート 2ポート</li>
+      <li>ファンコネクタ 1ポート</li>
+      <li>MicroSDスロット 1スロット</li>
+      <li>40Pin GPIO</li>
+      <li>HATコネクタ 4pin</li>
+      <li>RTCコネクタ 1ポート</li>
+      <li>UARTコネクタ 1ポート</li>
+    </ul>
    <h4 id="purpose">主な使用用途</h4>
    <ul>
     <li>デスクトップとしての使用</li>
@@ -192,7 +210,8 @@
     SSDをつけることで起動やアプリケーション等の動作が速くなります。</p>
    <p>他にもこの「Raspberry Pi AI HAT+」はラズベリーパイでAIを使った推論をするときなどに使います。
     <img class="hatimg" src="raspberry-pi-ai-hat-13-tops-modul-hat-z-akceleratorem-ai-do-raspberry-pi-5-591310953.jpg" alt="Raspberry Pi AI HAT" /></p>
-  
+   <p>このようにラズベリーパイの性能を最大限に引き出す多種多様なHATがあるので調べてみてはいかがでしょうか。</p>
+
    </p>
   </body>
 </html>
