--- a/index2.html
+++ b/index2.html
@@ -211,7 +211,15 @@
    <p>他にもこの「Raspberry Pi AI HAT+」はラズベリーパイでAIを使った推論をするときなどに使います。
     <img class="hatimg" src="raspberry-pi-ai-hat-13-tops-modul-hat-z-akceleratorem-ai-do-raspberry-pi-5-591310953.jpg" alt="Raspberry Pi AI HAT" /></p>
    <p>このようにラズベリーパイの性能を最大限に引き出す多種多様なHATがあるので調べてみてはいかがでしょうか。</p>
-
-   </p>
+   <h4>様々なHATについて</h4>
+   <p><img src="raspberry-pi-ai-hat-13-tops-modul-hat-z-akceleratorem-ai-do-raspberry-pi-5-591310953.jpg" alt="AI HAT" />Raspberry Pi AI HATは上でも
+    解説した通りラズベリーパイ5にAIの機能を拡張させるHATです。お値段は高いですが、ローカルでAIを動かすという用途なら効果的な投資とも言えます。</p>
+   <p><img src="raspberry-pi-m.2-hat-plus-1-165424808.jpg" alt="M.2 HAT" />これも先程解説しましたが、ラズベリーパイにM.2規格のSSDをつなげるためのHATです。
+    ラズベリーパイOSやアプリケーションをこのSSDから起動するように設定すると待ち時間が大幅に短縮されて作業効率が上がります。
+    主にラズベリーパイをデスクトップとして使ったり、ホームサーバーとして使う用途におすすめ。</p>
+   <p><img src="71z51DbB5GL._AC_SX466_.jpg" alt="UPS Image" />これはUPSというHATで、突然の停電による電源切断でラズベリーパイのデータなどを破損しないようにするものです。
+    サーバー用途のラズベリーパイにこれをつけると安定性が増します。</p>
+   <p><img src=""</p>
+   </ul>
   </body>
 </html>
